App working with handlebar as templating engine

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,8 @@
 ---
-title: Fergus test app 
+title: Contentful Blog Example space
 contentful:
   content_type: article
-  entry_filename_pattern: ${fields.slug}
-  entry_template: article.pug
-templates: article.pug
+  entry_filename_pattern: article/${ fields.slug }
+  entry_template: article.html
+layout: article.html
 ---
-
-
-this is a test
