clean handlebars version, just about to try and convert it to pug

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 title: Contentful Blog Example space
 contentful:
   content_type: article
-  entry_filename_pattern: article/${ fields.slug }
+  entry_filename_pattern: ${ fields.slug }
   entry_template: article.html
 layout: article.html
 ---
